[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esw"
version = "0.1.0"
description = "utilities for mrover esw software"
authors = [
    { name = "Michigan Mars Rover Embedded Software Team" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Jinja2~=3.1.6",
    "cantools~=41.0.2",
    "moteus~=0.3.98",
    "moteus-gui~=0.3.98",
    "mkdocs~=1.6.1",
    "pymdown-extensions~=10.17.2",
    "pyserial~=3.5",
    "python-can~=4.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.1",
    "ruff~=0.14.6",
    "ty~=0.0.11",
]

[tool.setuptools.packages.find]
include = ["esw"]
exclude = ["fdcanusb"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
